mule-user-guide/v/3.5/connect-with-salesforce-example.adoc
= 连接Salesforce示例
:keywords: salesforce, example

*_Enterprise, CloudHub_*

此应用程序使用预先打包的工具与Salesforce进行智能连接。基于简单的用例，应用程序将获取联系人的CSV文件并将联系人信息上载到活动的Salesforce用户帐户。它使用*DataSense*和*Anypoint* *DataMapper Transformer*来映射和转换数据，从而促进与此软件即服务（SaaS）提供程序的快速集成。

=== 与Salesforce连接

image:csv_to_sfdc2.png[csv_to_sfdc2]

有时，您可能会发现需要将一个或多个组织的本地系统与SaaS（如Salesforce）连接。理想情况下，这些独立系统可以互相交流并共享数据，从而实现端到端业务流程的自动化。使用Mule应用程序来促进您的本地系统和Salesforce之间的通信。 （尽管这个用例没有扩展到很远，但您也可以使用Mule来促进SaaS提供商之间的通信。）

== 假设


本文档假定您熟悉Mule和Anypoint Studio界面。为提高您对Studio的熟悉度，请考虑完成一个或多个 link:/anypoint-studio/v/5/basic-studio-tutorial[Anypoint Studio教程]。此外，此示例假定您对 link:/mule-user-guide/v/3.5/mule-application-architecture[骡流]， link:/mule-user-guide/v/3.5/global-elements[骡全球元素]和Studio的 link:/anypoint-studio/v/6/datamapper-user-guide-and-reference[Anypoint DataMapper]有基本的了解。


本文档在Anypoint Studio，Mule ESB的图形用户界面的上下文中描述该示例的细节，并在相关时包含XML编辑器的配置细节。

== 示例用例

尽管是一个简单的例子，但这个应用程序仍然使用复杂的功能来演示一个基本的用例。该应用程序接受包含联系人信息（包括姓名，电话号码和电子邮件）的CSV文件，并将其上传到Salesforce帐户，并自动将正确的数据插入每个Salesforce字段。

image:contacts-to-SFDC.png[接触到SFDC]

== 设置并运行示例

完成以下过程来创建，然后在您自己的Anypoint Studio实例中运行此示例。如果您想通过屏幕截图和代码片段简单检查此示例，请跳过<<How it Works>>。

[IMPORTANT]
为了见证端到端功能，您必须拥有一个活跃的Salesforce帐户，您不必介入插入三个示例联系人。在此应用程序自动上传这些联系人之后，您可以在Salesforce帐户中手动删除它们。

.  link:/mule-user-guide/v/3.5/mule-examples[*创建*] Anypoint Studio中的示例应用程序。 _不运行应用程序._
. 登录到您的Salesforce帐户。从您的帐户菜单（您的帐户标有您的姓名）中选择*Setup*。
. 在左侧导航栏的*Personal Setup*标题下，单击以展开*My* **Personal Information **文件夹。
. 点击*Reset My Security Token*。 Salesforce会将令牌和电子邮件重置为新的令牌和电子邮件。
. 访问Salesforce发送的电子邮件并将新令牌复制到您的本地剪贴板上。
. 在Studio中的应用程序中，点击*Global Elements*标签。
. 双击Salesforce全局元素以打开其*Global Element Properties*面板。在*Security Token*字段中，粘贴您从电子邮件复制的新Salesforce令牌。或者，在XML编辑器中配置全局元素。

=== 配置全局元素

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:sfdc_global.png[sfdc_global]
....
[tab,title="Studio XML Editor"]
....
[source, xml, linenums]
----
<sfdc:config name="Salesforce" username="testsfdc@mulesoft.com" password="password"  doc:name="Salesforce" securityToken="bgfsG5688kroeemIHMnYJ">
  <sfdc:connection-pooling-profile initialisationPolicy="INITIALISE_ONE" exhaustedAction="WHEN_EXHAUSTED_GROW"/>
</sfdc:config>
----
....
------

=== 配置用户名和密码

. 将*Username*和*Password*字段的内容更改为您的账户特定值，然后点击*OK*保存更改。
. 返回连接器的属性编辑器，将*Operation*设置为“创建”，将*sObject Type*设置为“联系人”：
+
image:select_operation.png[select_operation]

=== 运行应用程序

. 在*Package Explorer*中，右键单击connect-with-salesforce项目名称，然后选择*Run As*> *Mule Application*。 Studio在嵌入式服务器上运行应用程序。
. 该项目包含一个名为`contacts.csv`的CSV示例文件，您可以使用该文件来观察应用程序的端到端功能。在*Package Explorer*中，点击`src/test/resources`文件夹将其展开，然后在该文件夹中找到`contacts.csv`文件。
. 点击并拖动`contacts.csv`文件到同一目录中的`input`文件夹中。
. 应用程序中的文件连接器每十秒轮询`input`文件夹。它会提取CSV文件并对其进行处理，然后将其存储到同一目录中的`output`文件夹中。 （点击*F5*刷新`input`和`output`文件夹的内容。）
. 在您的浏览器中，访问您的Salesforce帐户，然后导航至*Contacts*选项卡。
. 使用下拉菜单显示*All Contacts*，然后扫描您的联系人以查找三个新条目：
Charles Bingley。** 
** 菲茨威廉达西
** 乔治韦克汉姆
. 通过点击*Console*中的正方形，红色终止按钮来停止Mule应用程序。
. 从您的Salesforce帐户中删除三个示例联系人。

== 它是如何工作的

此应用程序使用包含三个元素的单个流程接受包含联系信息的CSV文件，然后将联系人上载到Salesforce。

link:/mule-user-guide/v/3.5/file-connector[文件连接器]每10秒轮询输入文件夹中的新文件。当它发现一个新文件时，它会读取它并将内容传递给 link:/anypoint-studio/v/6/datamapper-user-guide-and-reference[DataMapper Transformer]。此转换器不仅可将数据格式从CSV转换为集合，还可自动将CSV文件（FirstName，LastName等）中的输入字段映射到Salesforce在集合中使用的输出字段。

每个映射都会获得一个箭头，它可以帮助您可视化DataMapper转换器中发生的活动。将文件中的所有联系人转换为一组适用于Salesforce的数据后，该应用程序会使用 link:/mule-user-guide/v/3.5/salesforce-connector[Salesforce连接器]将数据推送到您的Salesforce帐户中。连接器的配置指定了*operation*  -  `Create`  - 和*sObject type*  -  `Contact`  - 它确切地说明数据如何上传到Salesforce;在这种情况下，它会创建新的联系人。

虽然该应用程序的功能相对简单，但通过使用 link:/mule-user-guide/v/3.5/datasense[DataSense]来说明该项目的优点。不是顺序构建应用程序 - 添加，然后根据它们在流程中出现的顺序手动配置每个元素 - 您可以使用DataSense自动完成最困难的配置。以下步骤概述了构建此应用程序的过程。

. 将文件连接器放入您的应用程序，完成简单的配置，使其能够轮询输入文件的特定文件夹。

=== 配置文件连接器

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:filesalesforce.png[filesalesforce]

[cols="2*"]
|===
|*Field* |*Value*
|*Display Name* |`File Input`
|*Path* |`src/test/resources/input`
|*Move to Directory* |`src/test/resources/output`
|*Polling Frequency* |`10000`
|===
....
[tab,title="Studio XML Editor"]
....
[source, xml, linenums]
----
<file:inbound-endpoint path="src/test/resources/input" moveToDirectory="src/test/resources/output" pollingFrequency="10000" responseTimeout="10000" doc:name="File Input"/>
----

[cols="2*"]
|===
|*Attribute* |*Value*
|*path* |`src/test/resources/input`
|*moveToDirectory* |`src/test/resources/output`
|*pollingFrequency* |`10000`
|*doc:name* |`File Input`
|===
....
------

=== 添加Salesforce连接器

将Salesforce连接器添加到流程中。此时，您可以使用Salesforce帐户特定的详细信息配置连接器，并测试与Salesforce的连接。嵌入式数据感知功能不仅可以确认您有清晰的沟通渠道，还会收集有关Salesforce对象的元数据以及它所接受的数据类型。 （通过在此过程中将DataMapper引入流程中，此元数据的值变得明显。）

==== 在Studio中配置连接器

[tabs]
------
[tab,title="Studio Visual Editor"]
....
.. Modify the display name for the connector, if you wish, then click the *plus sign* next to the *Config Reference* drop-down to create a new *Global Element*. 
.. Select the *Salesforce* global element, then click *OK*.
.. Enter values in the *Username*, *Password* and *Security token* fields, then click *OK*. (See the Set Up section above for details on how to acquire the security token.) Notice that Studio automatically enables DataSense in the global element.

image:sfdc_global.png[sfdc_global]
....
[tab,title="Studio XML Editor"]
....
[source, xml, linenums]
----
<sfdc:config name="Salesforce" username="testsfdc@mulesoft.com" password="password"  doc:name="Salesforce" securityToken="bgfsG5688kroeemIHMnYJ">
  <sfdc:connection-pooling-profile initialisationPolicy="INITIALISE_ONE" exhaustedAction="WHEN_EXHAUSTED_GROW"/>
</sfdc:config>
<flow>
  ...
</flow>
----
....
------

==== 测试连接

当您单击测试连接时，Mule会测试与Salesforce的连接（请参阅下图）。使用有效的用户名，密码和安全令牌，连接测试会成功，Mule会保存您的全局元素配置。如果任何值无效，则连接测试将失败，并且Mule不会保存全局元素，提示您更正无效配置。

image:test_connection2.png[test_connection2]

==== 选择操作和sObject

回到Salesforce连接器属性编辑器中，使用下拉菜单选择*Operation*和*sObject*类型。由于DataSense活动收集了有关Salesforce操作和数据sObject类型的元数据，因此Mule能够在下拉菜单中为每个字段显示Salesforce特定值的列表（请参阅下图）。

image:select_operation.png[select_operation]

[%header%autowidth.spread]
|===
| {字段{1}}值
| {操作{1}}创建
| sObject类型 |联系人
|===

==== 添加DataMapper

定义了适用于Salesforce的输出后，您可以在流程中的元素之间放置一个DataMapper，以将CSV输入字段映射到Salesforce输出字段。由于DataSense已经从Salesforce获取操作和sObject信息，因此DataMapper要求您仅配置输入值（如下，左侧）。在这个示例应用程序中，我们使用了一个现有的CSV示例来定义DataMapper中的输入字段（在右下方）。

image:dataMapper_mapping.png[dataMapper_mapping]

. 点击输入面板中*Type*旁边的修改图标，将输入类型更改为*CSV*。
. 使用单选按钮选择*User Defined*，点击*Create/Edit Structure...*
+
image:adjust_DM.png[adjust_DM]
+
. 定义DataMapper从中绘制其输入值的CSV文件中的字段。点击*OK*。
+
image:define_csv.png[define_csv]
+
. 当您点击*Create mapping*时，Mule将输入字段映射为输出。在输入和输出字段名称相同的情况下，DataMapper智能地自动将输入映射到输出，就像本示例应用程序中的字段一样。否则，您可以通过单击并将输入字段拖动到Data Mapping Console中的输出字段来手动将输入快速映射到输出（参见下文）。
+
image:mapped_data.png[mapped_data]
+
. 现在配置完成，您可以保存，然后运行应用程序。将包含联系信息的CSV文件送入输入文件夹，并观看新内容出现在您的Salesforce帐户中（请参阅下图）。
+
image:sfdc_contact_list.png[sfdc_contact_list]

== 完整代码

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:flow_contacts_to_sfdc.png[flow_contacts_to_sfdc]
....
[tab,title="Studio XML Editor"]
....
[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule version="EE-3.5.0" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:data-mapper="http://www.mulesoft.org/schema/mule/ee/data-mapper" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:file="http://www.mulesoft.org/schema/mule/file" xmlns:sfdc="http://www.mulesoft.org/schema/mule/sfdc" xmlns:spring="http://www.springframework.org/schema/beans" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
http://www.mulesoft.org/schema/mule/ee/data-mapper http://www.mulesoft.org/schema/mule/ee/data-mapper/current/mule-data-mapper.xsd
http://www.mulesoft.org/schema/mule/sfdc http://www.mulesoft.org/schema/mule/sfdc/current/mule-sfdc.xsd
http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd">
    <sfdc:config doc:name="Salesforce" name="Salesforce" password="password" username="salesforceuser@email.com">
        <sfdc:connection-pooling-profile exhaustedAction="WHEN_EXHAUSTED_GROW" initialisationPolicy="INITIALISE_ONE"/>
    </sfdc:config>
    <data-mapper:config doc:name="DataMapper" name="datamapper_grf" transformationGraphPath="datamapper.grf"/>
    <flow doc:description="Upload a csv file of contact information into Salesforce as new contacts." doc:name="Contacts_to_SFDC" name="Contacts_to_SFDC">
        <file:inbound-endpoint doc:name="File Input" moveToDirectory="src/test/resources/output" path="src/test/resources/input" pollingFrequency="10000" responseTimeout="10000"/>
        <data-mapper:transform config-ref="datamapper_grf" doc:name="DataMapper"/>
        <sfdc:create config-ref="Salesforce" doc:name="Salesforce" type="Contact">
            <sfdc:objects ref="#[payload]"/>
        </sfdc:create>
    </flow>
</mule>
----
....
------

== 文档

Studio包含的功能使您能够轻松导出您为项目录制的所有文档。无论何时您想与Studio环境外的其他人共享您的项目，您都可以导出项目的文档以打印，发送电子邮件或在线共享。 Studio自动生成的文档包括：

* 应用程序中流的可视化图
* 与应用程序中的每个流对应的XML配置
* 您在流程中任何构建块的“备注”选项卡中输入的文本

按照 link:/mule-user-guide/v/3.5/importing-and-exporting-in-studio[步骤]导出自动生成的Studio文档。

== 另请参阅

* 详细了解 link:/mule-user-guide/v/3.5/testing-connections[连接测试]和 link:/mule-user-guide/v/3.5/datasense[DataSense]。
* 详细了解 link:/anypoint-studio/v/6/datamapper-user-guide-and-reference[Anypoint DataMapper]。
*  link:/mule-user-guide/v/3.5/legacy-modernization-example[遗产现代化]
*  link:/mule-user-guide/v/3.5/xml-only-soap-web-service-example[纯XML的SOAP Web服务]。
